Renaming and syncing queue names in cdk with rest of the codebase.

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,300 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mclient = DgraphClient(DgraphClientStub('alpha0.mastergraphcluster.grapl:9080'))\n",
-    "eclient = DgraphClient(DgraphClientStub('alpha0.engagementgraphcluster.grapl:9080'))"
+    "mclient = DgraphClient(DgraphClientStub('alpha0.master-graph.grapl:9080'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  # Type Definitions\n",
-      "  type Asset {\n",
-      "      node_key: string\n",
-      "      hostname: string\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type Process {\n",
-      "      node_key: string\n",
-      "      asset_id: string\n",
-      "      image_name: string\n",
-      "      process_name: string\n",
-      "      arguments: string\n",
-      "      process_id: int\n",
-      "      created_timestamp: int\n",
-      "      terminate_time: int\n",
-      "      children: uid  # type: Process\n",
-      "      bin_file: uid  # type: File\n",
-      "      created_files: uid  # type: File\n",
-      "      deleted_files: uid  # type: File\n",
-      "      read_files: uid  # type: File\n",
-      "      wrote_files: uid  # type: File\n",
-      "      created_connections: uid  # type: ProcessOutboundConnection\n",
-      "      inbound_connections: uid  # type: ProcessInboundConnection\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type File {\n",
-      "      node_key: string\n",
-      "      file_name: string\n",
-      "      asset_id: string\n",
-      "      file_path: string\n",
-      "      file_extension: string\n",
-      "      file_mime_type: string\n",
-      "      file_version: string\n",
-      "      file_description: string\n",
-      "      file_product: string\n",
-      "      file_company: string\n",
-      "      file_directory: string\n",
-      "      file_hard_links: string\n",
-      "      signed_status: string\n",
-      "      md5_hash: string\n",
-      "      sha1_hash: string\n",
-      "      sha256_hash: string\n",
-      "      file_size: int\n",
-      "      file_inode: int\n",
-      "      signed: bool\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type IpConnection {\n",
-      "      node_key: string\n",
-      "      src_ip_address: string\n",
-      "      src_port: string\n",
-      "      dst_ip_address: string\n",
-      "      dst_port: string\n",
-      "      created_timestamp: int\n",
-      "      terminated_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      inbound_connection_to: uid  # type: IpAddress\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type IpAddress {\n",
-      "      node_key: string\n",
-      "      ip_address: string\n",
-      "      first_seen_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      ip_connections: uid  # type: IpConnection\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type IpPort {\n",
-      "      node_key: string\n",
-      "      ip_address: string\n",
-      "      protocol: string\n",
-      "      port: int\n",
-      "      first_seen_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      network_connections: uid  # type: NetworkConnection\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type NetworkConnection {\n",
-      "      node_key: string\n",
-      "      src_ip_address: string\n",
-      "      src_port: string\n",
-      "      dst_ip_address: string\n",
-      "      dst_port: string\n",
-      "      created_timestamp: int\n",
-      "      terminated_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      inbound_connection_to: uid  # type: IpPort\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type ProcessInboundConnection {\n",
-      "      node_key: string\n",
-      "      ip_address: string\n",
-      "      protocol: string\n",
-      "      created_timestamp: int\n",
-      "      terminated_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      port: int\n",
-      "      bound_port: uid  # type: IpPort\n",
-      "      bound_ip: uid  # type: IpAddress\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type ProcessOutboundConnection {\n",
-      "      node_key: string\n",
-      "      ip_address: string\n",
-      "      protocol: string\n",
-      "      created_timestamp: int\n",
-      "      terminated_timestamp: int\n",
-      "      last_seen_timestamp: int\n",
-      "      port: int\n",
-      "      connected_over: uid  # type: IpPort\n",
-      "      connected_to: uid  # type: IpPort\n",
-      "      risks: uid  # type: Risk\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type Risk {\n",
-      "      node_key: string\n",
-      "      analyzer_name: string\n",
-      "      risk_score: int\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  type Lens {\n",
-      "      node_key: string\n",
-      "      lens: string\n",
-      "      score: int\n",
-      "      scope: uid  # type: Any\n",
-      "  }\n",
-      "\n",
-      "\n",
-      "  # Schema Definitions\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  hostname: string @index(trigram, exact, hash) .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  asset_id: string @index(trigram, exact, hash) .\n",
-      "  image_name: string @index(trigram, exact, hash) .\n",
-      "  process_name: string @index(trigram, exact, hash) .\n",
-      "  arguments: string @index(trigram, exact, hash) .\n",
-      "  process_id: int @index(int) .\n",
-      "  created_timestamp: int @index(int) .\n",
-      "  terminate_time: int @index(int) .\n",
-      "  children: [uid] @reverse .\n",
-      "  bin_file: uid @reverse .\n",
-      "  created_files: [uid] @reverse .\n",
-      "  deleted_files: [uid] @reverse .\n",
-      "  read_files: [uid] @reverse .\n",
-      "  wrote_files: [uid] @reverse .\n",
-      "  created_connections: [uid] @reverse .\n",
-      "  inbound_connections: [uid] @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  file_name: string @index(trigram, exact, hash) .\n",
-      "  asset_id: string @index(trigram, exact, hash) .\n",
-      "  file_path: string @index(trigram, exact, hash) .\n",
-      "  file_extension: string @index(trigram, exact, hash) .\n",
-      "  file_mime_type: string @index(trigram, exact, hash) .\n",
-      "  file_version: string @index(trigram, exact, hash) .\n",
-      "  file_description: string @index(trigram, exact, hash) .\n",
-      "  file_product: string @index(trigram, exact, hash) .\n",
-      "  file_company: string @index(trigram, exact, hash) .\n",
-      "  file_directory: string @index(trigram, exact, hash) .\n",
-      "  file_hard_links: string @index(trigram, exact, hash) .\n",
-      "  signed_status: string @index(trigram, exact, hash) .\n",
-      "  md5_hash: string @index(trigram, exact, hash) .\n",
-      "  sha1_hash: string @index(trigram, exact, hash) .\n",
-      "  sha256_hash: string @index(trigram, exact, hash) .\n",
-      "  file_size: int @index(int) .\n",
-      "  file_inode: int @index(int) .\n",
-      "  signed: bool @index(bool) .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  src_ip_address: string @index(trigram, exact, hash) .\n",
-      "  src_port: string @index(trigram, exact, hash) .\n",
-      "  dst_ip_address: string @index(trigram, exact, hash) .\n",
-      "  dst_port: string @index(trigram, exact, hash) .\n",
-      "  created_timestamp: int @index(int) .\n",
-      "  terminated_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  inbound_connection_to: uid @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  ip_address: string @index(trigram, exact, hash) .\n",
-      "  first_seen_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  ip_connections: [uid] @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  ip_address: string @index(trigram, exact, hash) .\n",
-      "  protocol: string @index(trigram, exact, hash) .\n",
-      "  port: int @index(int) .\n",
-      "  first_seen_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  network_connections: [uid] @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  src_ip_address: string @index(trigram, exact, hash) .\n",
-      "  src_port: string @index(trigram, exact, hash) .\n",
-      "  dst_ip_address: string @index(trigram, exact, hash) .\n",
-      "  dst_port: string @index(trigram, exact, hash) .\n",
-      "  created_timestamp: int @index(int) .\n",
-      "  terminated_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  inbound_connection_to: uid @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  ip_address: string @index(trigram, exact, hash) .\n",
-      "  protocol: string @index(trigram, exact, hash) .\n",
-      "  created_timestamp: int @index(int) .\n",
-      "  terminated_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  port: int @index(int) .\n",
-      "  bound_port: [uid] @reverse .\n",
-      "  bound_ip: [uid] @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  ip_address: string @index(trigram, exact, hash) .\n",
-      "  protocol: string @index(trigram, exact, hash) .\n",
-      "  created_timestamp: int @index(int) .\n",
-      "  terminated_timestamp: int @index(int) .\n",
-      "  last_seen_timestamp: int @index(int) .\n",
-      "  port: int @index(int) .\n",
-      "  connected_over: uid @reverse .\n",
-      "  connected_to: uid @reverse .\n",
-      "  risks: [uid] @reverse .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  analyzer_name: string @index(trigram, exact, hash) .\n",
-      "  risk_score: int @index(int) .\n",
-      "\n",
-      "\n",
-      "  node_key: string @upsert @index(hash) .\n",
-      "  lens: string @index(trigram, exact, hash) .\n",
-      "  score: int @index(int) .\n",
-      "  scope: [uid] @reverse .\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# drop_all(mclient)\n",
-    "# drop_all(eclient)\n",
     "\n",
     "schemas = (\n",
     "    AssetSchema(),\n",
@@ -361,29 +83,19 @@
     "lens_schema = LensSchema()\n",
     "eg_schemas = [s.with_forward_edge('risks', ManyToMany(RiskSchema), 'risky_nodes') for s in schemas]\n",
     "eg_schemas.extend([risk_schema, lens_schema])\n",
-    "eg_schema_str = format_schemas(eg_schemas)\n",
-    "set_schema(eclient, eg_schema_str)"
+    "eg_schema_str = format_schemas(eg_schemas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-3ec0c580d450>, line 23)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  File \u001B[0;32m\"<ipython-input-5-3ec0c580d450>\"\u001B[0;36m, line \u001B[0;32m23\u001B[0m\n\u001B[0;31m    cleartext +=\u001B[0m\n\u001B[0m                 ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import string\n",
@@ -442,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
