Temporary fix for cors in python services. grapl_analyzerlib plugin retriever fix. Notebook ACL fix.

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -71,19 +71,14 @@
     "    IpPortSchema(),\n",
     "    NetworkConnectionSchema(),\n",
     "    ProcessInboundConnectionSchema(),\n",
-    "    ProcessOutboundConnectionSchema(),  \n",
+    "    ProcessOutboundConnectionSchema(),\n",
+    "    RiskSchema(),\n",
+    "    LensSchema(),\n",
     ")\n",
     "\n",
     "schema_str = format_schemas(schemas)\n",
     "# print(schema_str)\n",
-    "set_schema(mclient, schema_str)\n",
-    "\n",
-    "\n",
-    "risk_schema = RiskSchema()\n",
-    "lens_schema = LensSchema()\n",
-    "eg_schemas = [s.with_forward_edge('risks', ManyToMany(RiskSchema), 'risky_nodes') for s in schemas]\n",
-    "eg_schemas.extend([risk_schema, lens_schema])\n",
-    "eg_schema_str = format_schemas(eg_schemas)"
+    "set_schema(mclient, schema_str)"
    ]
   },
   {
