--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -6,6 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pydgraph\n",
+    "#!pip install grapl_analyzerlib\n",
+    "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deployment_name = <YOUR_DEPLOYMENT>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "import pydgraph\n",
     "\n",
@@ -49,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mclient = DgraphClient(DgraphClientStub('alpha0.master-graph.grapl:9080'))"
+    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + '.dgraph.grapl:9080'))"
    ]
   },
   {
@@ -112,7 +132,7 @@
     "def create_user(username, cleartext):\n",
     "    assert cleartext\n",
     "    dynamodb = boto3.resource('dynamodb')\n",
-    "    table = dynamodb.Table('user_auth_table')\n",
+    "    table = dynamodb.Table(deployment_name + '-user_auth_table')\n",
     "    \n",
     "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
     "    # client side hashing\n",
@@ -194,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
