--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -41,26 +41,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_schema(client, schema, engagement=False):\n",
+    "def set_schema(client, schema) -> None:\n",
     "    op = pydgraph.Operation(schema=schema)\n",
     "    client.alter(op)\n",
-    "                 \n",
-    "                \n",
-    "def drop_all(client):\n",
+    "\n",
+    "\n",
+    "def drop_all(client) -> None:\n",
     "    op = pydgraph.Operation(drop_all=True)\n",
     "    client.alter(op)\n",
-    "    \n",
-    "def format_schemas(schema_defs):\n",
-    "    schemas = \"\\n\\n\".join([schema.to_schema_str() for schema in schema_defs])\n",
+    "\n",
+    "\n",
+    "def format_schemas(schema_defs: List[\"BaseSchema\"]) -> str:\n",
+    "    schemas = \"\\n\\n\".join([schema.generate_schema() for schema in schema_defs])\n",
     "\n",
     "    types = \"\\n\\n\".join([schema.generate_type() for schema in schema_defs])\n",
     "\n",
-    "    return \"\\n\".join([\n",
-    "        \"  # Type Definitions\",\n",
-    "        types,\n",
-    "        \"\\n  # Schema Definitions\",\n",
-    "        schemas,\n",
-    "    ])"
+    "    return \"\\n\".join(\n",
+    "        [\"  # Type Definitions\", types, \"\\n  # Schema Definitions\", schemas]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def query_dgraph_predicate(client: \"GraphClient\", predicate_name: str):\n",
+    "    query = f\"\"\"\n",
+    "        schema(pred: {predicate_name}) {{  }}\n",
+    "    \"\"\"\n",
+    "    txn = client.txn(read_only=True)\n",
+    "    try:\n",
+    "        res = json.loads(txn.query(query).json)[\"schema\"][0]\n",
+    "    finally:\n",
+    "        txn.discard()\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def meta_into_edge(schema, predicate_meta):\n",
+    "    if predicate_meta.get(\"list\"):\n",
+    "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToMany)\n",
+    "    else:\n",
+    "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToOne)\n",
+    "\n",
+    "\n",
+    "def meta_into_property(schema, predicate_meta):\n",
+    "    is_set = predicate_meta.get(\"list\")\n",
+    "    type_name = predicate_meta[\"type\"]\n",
+    "    primitive = None\n",
+    "    if type_name == \"string\":\n",
+    "        primitive = PropPrimitive.Str\n",
+    "    if type_name == \"int\":\n",
+    "        primitive = PropPrimitive.Int\n",
+    "    if type_name == \"bool\":\n",
+    "        primitive = PropPrimitive.Bool\n",
+    "\n",
+    "    return PropType(primitive, is_set, index=predicate_meta.get(\"index\", []))\n",
+    "\n",
+    "\n",
+    "def meta_into_predicate(schema, predicate_meta):\n",
+    "    try:\n",
+    "        if predicate_meta[\"type\"] == \"uid\":\n",
+    "            return meta_into_edge(schema, predicate_meta)\n",
+    "        else:\n",
+    "            return meta_into_property(schema, predicate_meta)\n",
+    "    except Exception as e:\n",
+    "        LOGGER.error(f\"Failed to convert meta to predicate: {predicate_meta} {e}\")\n",
+    "        raise e\n",
+    "\n",
+    "\n",
+    "def query_dgraph_type(client: \"GraphClient\", type_name: str):\n",
+    "    query = f\"\"\"\n",
+    "        schema(type: {type_name}) {{ type }}\n",
+    "    \"\"\"\n",
+    "    txn = client.txn(read_only=True)\n",
+    "    try:\n",
+    "        res = json.loads(txn.query(query).json)\n",
+    "    finally:\n",
+    "        txn.discard()\n",
+    "\n",
+    "    if not res:\n",
+    "        return []\n",
+    "    if not res.get(\"types\"):\n",
+    "        return []\n",
+    "\n",
+    "    res = res[\"types\"][0][\"fields\"]\n",
+    "    predicate_names = []\n",
+    "    for pred in res:\n",
+    "        predicate_names.append(pred[\"name\"])\n",
+    "\n",
+    "    predicate_metas = []\n",
+    "    for predicate_name in predicate_names:\n",
+    "        predicate_metas.append(query_dgraph_predicate(client, predicate_name))\n",
+    "\n",
+    "    return predicate_metas\n",
+    "\n",
+    "\n",
+    "def extend_schema(graph_client: GraphClient, schema: \"BaseSchema\"):\n",
+    "    predicate_metas = query_dgraph_type(graph_client, schema.self_type())\n",
+    "\n",
+    "    for predicate_meta in predicate_metas:\n",
+    "        predicate = meta_into_predicate(schema, predicate_meta)\n",
+    "        if isinstance(predicate, PropType):\n",
+    "            schema.add_property(predicate_meta[\"predicate\"], predicate)\n",
+    "        else:\n",
+    "            schema.add_edge(predicate_meta[\"predicate\"], predicate, \"\")\n",
+    "\n",
+    "\n",
+    "def provision_master_graph(\n",
+    "        master_graph_client: GraphClient, schemas: List[\"BaseSchema\"]\n",
+    ") -> None:\n",
+    "    mg_schema_str = format_schemas(schemas)\n",
+    "    set_schema(master_graph_client, mg_schema_str)\n"
    ]
   },
   {
@@ -82,23 +170,32 @@
    "source": [
     "# drop_all(mclient)\n",
     "\n",
-    "schemas = (\n",
-    "    AssetSchema(),\n",
-    "    ProcessSchema(),\n",
-    "    FileSchema(),\n",
-    "    IpConnectionSchema(),\n",
-    "    IpAddressSchema(),\n",
-    "    IpPortSchema(),\n",
-    "    NetworkConnectionSchema(),\n",
-    "    ProcessInboundConnectionSchema(),\n",
-    "    ProcessOutboundConnectionSchema(),\n",
-    "    RiskSchema(),\n",
-    "    LensSchema(),\n",
-    ")\n",
+    "def provision_mg(mclient) -> None:\n",
+    "    # drop_all(mclient)\n",
     "\n",
-    "schema_str = format_schemas(schemas)\n",
-    "# print(schema_str)\n",
-    "set_schema(mclient, schema_str)"
+    "    schemas = (\n",
+    "        AssetSchema(),\n",
+    "        ProcessSchema(),\n",
+    "        FileSchema(),\n",
+    "        IpConnectionSchema(),\n",
+    "        IpAddressSchema(),\n",
+    "        IpPortSchema(),\n",
+    "        NetworkConnectionSchema(),\n",
+    "        ProcessInboundConnectionSchema(),\n",
+    "        ProcessOutboundConnectionSchema(),\n",
+    "        RiskSchema(),\n",
+    "        LensSchema(),\n",
+    "    )\n",
+    "\n",
+    "    for schema in schemas:\n",
+    "        schema.init_reverse()\n",
+    "\n",
+    "    for schema in schemas:\n",
+    "        extend_schema(mclient, schema)\n",
+    "\n",
+    "    provision_master_graph(mclient, schemas)\n",
+    "\n",
+    "provision_mg(mclient)"
    ]
   },
   {
