Improve logging in provision. Fix missing node_types in a few Viewable constructors

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -26,13 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import *\n",
     "import json\n",
     "import pydgraph\n",
     "\n",
     "from pydgraph import DgraphClient, DgraphClientStub\n",
     "from grapl_analyzerlib.schemas import *\n",
-    "\n",
-    "from grapl_analyzerlib.schemas.schema_builder import ManyToMany"
+    "from grapl_analyzerlib.prelude import *\n",
+    "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType\n",
+    "from grapl_analyzerlib.nodes.base import BaseSchema"
    ]
   },
   {
