Initial, possibly-bad, approach
both op and security alarms now

Update the upload_analyzer stuff a bit

Added a dashboard for our pipeline

Fix up documentation and pipeline dashboard

revert readme

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!python -m pip install --upgrade -q pip\n",
+    "!pip install typing-extensions\n",
     "!pip install pydgraph\n",
     "#!pip install grapl_analyzerlib\n",
     "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib"
