--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -260,11 +260,12 @@
     "#####\n",
     "username = ''\n",
     "assert username, 'Replace the username with your desired username'    \n",
+    "print(f\"your username is {username}\")\n",
     "\n",
     "# Your password is automatically generated.\n",
     "allchar = string.ascii_letters + string.punctuation + string.digits\n",
     "password = \"\".join(choice(allchar) for x in range(randint(14, 16)))\n",
-    "print(f\"your password is '{password}'\\nstore it somewhere safe!\")\n",
+    "print(f\"your password is {password}\\nstore it somewhere safe!\")\n",
     "\n",
     "\n",
     "create_user(username, password)\n",
