Improve ipynb a bit. Improve documentation about uploading ipynb during provisioning stage. (#453)
* Remove redis cache fro mgrapl provision

* print username

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -254,47 +254,23 @@
     "            'password': password\n",
     "        }\n",
     "    )\n",
-    "    \n",
-    "    \n",
     "\n",
+    "#####\n",
+    "# Fill in your desired username.\n",
+    "#####\n",
+    "username = ''\n",
+    "assert username, 'Replace the username with your desired username'    \n",
+    "print(f\"your username is {username}\")\n",
+    "\n",
+    "# Your password is automatically generated.\n",
     "allchar = string.ascii_letters + string.punctuation + string.digits\n",
     "password = \"\".join(choice(allchar) for x in range(randint(14, 16)))\n",
-    "print(f'your password is {password}')\n",
-    "username = ''\n",
-    "assert username, 'Replace the username with your desired username'\n",
+    "print(f\"your password is {password}\\nstore it somewhere safe!\")\n",
+    "\n",
+    "\n",
     "create_user(username, password)\n",
     "password = \"\"\n",
     "print(\"\"\"Make sure to clear this cell and restart the notebook to ensure your password does not leak!\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# CLEAR CACHE\n",
-    "def clear_redis_caches():\n",
-    "    from redis import Redis\n",
-    "\n",
-    "    def chunker(seq, size):\n",
-    "        return [seq[pos:pos + size] for pos in range(0, len(seq), size)]\n",
-    "\n",
-    "    CACHE_ADDRS = [\n",
-    "    \n",
-    "    ]\n",
-    "    CACHE_PORT = 6379\n",
-    "    for CACHE_ADDR in CACHE_ADDRS:\n",
-    "        r = Redis(host=CACHE_ADDR, port=CACHE_PORT, db=0, decode_responses=True)\n",
-    "\n",
-    "        for keys in chunker([k for k in r.keys()], 10000):\n",
-    "            r.delete(*keys)\n",
-    "            \n",
-    "clear_redis_caches()\n"
    ]
   }
  ],
