grapl provision passes mypy

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -19,7 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deployment_name = <YOUR_DEPLOYMENT>"
+    "deployment_name = \"\"  # Fill this in!\n",
+    "\n",
+    "assert deployment_name, \"Please insert your deployment name here.\""
    ]
   },
   {
@@ -30,7 +32,7 @@
    "source": [
     "from typing import *\n",
     "import json\n",
-    "import pydgraph\n",
+    "import pydgraph  # type: ignore\n",
     "\n",
     "from pydgraph import DgraphClient, DgraphClientStub\n",
     "from grapl_analyzerlib.prelude import *\n",
@@ -54,7 +56,7 @@
     "    client.alter(op)\n",
     "\n",
     "\n",
-    "def format_schemas(schema_defs: List[\"BaseSchema\"]) -> str:\n",
+    "def format_schemas(schema_defs: Sequence[\"BaseSchema\"]) -> str:\n",
     "    schemas = \"\\n\\n\".join([schema.generate_schema() for schema in schema_defs])\n",
     "\n",
     "    types = \"\\n\\n\".join([schema.generate_type() for schema in schema_defs])\n",
@@ -148,7 +150,7 @@
     "\n",
     "\n",
     "def provision_master_graph(\n",
-    "        master_graph_client: GraphClient, schemas: List[\"BaseSchema\"]\n",
+    "        master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
     ") -> None:\n",
     "    mg_schema_str = format_schemas(schemas)\n",
     "    set_schema(master_graph_client, mg_schema_str)\n"
