--- a/src/python/grapl-notebook/Demo_Engagement.ipynb
+++ b/src/python/grapl-notebook/Demo_Engagement.ipynb
@@ -5,8 +5,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from grapl_analyzerlib.prelude import *\n",
-    "from grapl_analyzerlib.nodes.lens_node import *\n"
+    "from grapl_analyzerlib.prelude import (\n",
+    "    GraphClient,\n",
+    "    ProcessView,\n",
+    ")\n",
+    "from grapl_analyzerlib.nodes.engagement import EngagementView\n",
+    "from typing import cast"
    ],
    "metadata": {
     "collapsed": false,
@@ -20,7 +24,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mclient = LocalMasterGraphClient()"
+    "mclient = GraphClient()"
    ],
    "metadata": {
     "collapsed": false,
@@ -48,7 +52,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "cmd = engagement.get_node(<put cmd node_key here>).as_process()\n",
+    "cmd_node_key = \"\"\n",
+    "assert cmd_node_key, \"Please fill in the cmd_node_key.\"\n",
+    "\n",
+    "_cmd = engagement.get_node_by_key(cmd_node_key)\n",
+    "assert _cmd, f\"Expected a node with node key {cmd_node_key}\"\n",
+    "\n",
+    "# Inform runtime and typechecker that `cmd` is, in fact, a ProcessView\n",
+    "cmd = cast(ProcessView, _cmd.extend_self(ProcessView))\n",
     "cmd.get_process_name()"
    ],
    "metadata": {
