--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -30,14 +30,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import *\n",
     "import json\n",
-    "import pydgraph  # type: ignore\n",
+    "from typing import *\n",
     "\n",
-    "from pydgraph import DgraphClient, DgraphClientStub\n",
-    "from grapl_analyzerlib.prelude import *\n",
+    "import pydgraph  # type: ignore\n",
     "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType\n",
-    "from grapl_analyzerlib.nodes.base import BaseSchema"
+    "from grapl_analyzerlib.nodes.base import BaseSchema\n",
+    "from grapl_analyzerlib.prelude import *\n",
+    "from pydgraph import DgraphClient, DgraphClientStub"
    ]
   },
   {
@@ -150,10 +150,10 @@
     "\n",
     "\n",
     "def provision_master_graph(\n",
-    "        master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
+    "    master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
     ") -> None:\n",
     "    mg_schema_str = format_schemas(schemas)\n",
-    "    set_schema(master_graph_client, mg_schema_str)\n"
+    "    set_schema(master_graph_client, mg_schema_str)"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + '.dgraph.grapl:9080'))"
+    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + \".dgraph.grapl:9080\"))"
    ]
   },
   {
@@ -174,6 +174,7 @@
    "outputs": [],
    "source": [
     "# drop_all(mclient)\n",
+    "\n",
     "\n",
     "def provision_mg(mclient) -> None:\n",
     "    # drop_all(mclient)\n",
@@ -200,6 +201,7 @@
     "\n",
     "    provision_master_graph(mclient, schemas)\n",
     "\n",
+    "\n",
     "provision_mg(mclient)"
    ]
   },
@@ -214,54 +216,51 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "\n",
     "import os\n",
     "import string\n",
-    "\n",
     "from hashlib import pbkdf2_hmac, sha256\n",
-    "from random import randint, choice\n",
+    "from random import choice, randint\n",
+    "from typing import TYPE_CHECKING\n",
     "\n",
     "import boto3\n",
     "\n",
+    "if TYPE_CHECKING:\n",
+    "    from mypy_boto3_dynamodb import DynamoDBServiceResource\n",
+    "\n",
+    "\n",
     "def hash_password(cleartext, salt) -> str:\n",
     "    hashed = sha256(cleartext).digest()\n",
-    "    return pbkdf2_hmac(\n",
-    "        'sha256', \n",
-    "        hashed,\n",
-    "        salt,\n",
-    "        512000\n",
-    "    ).hex()\n",
+    "    return pbkdf2_hmac(\"sha256\", hashed, salt, 512000).hex()\n",
+    "\n",
     "\n",
     "def create_user(username, cleartext):\n",
     "    assert cleartext\n",
-    "    dynamodb = boto3.resource('dynamodb')\n",
-    "    table = dynamodb.Table(deployment_name + '-user_auth_table')\n",
-    "    \n",
+    "    dynamodb: DynamoDBServiceResource = boto3.resource(\"dynamodb\")\n",
+    "    table = dynamodb.Table(deployment_name + \"-user_auth_table\")\n",
+    "\n",
     "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
     "    # client side hashing\n",
-    "    cleartext += \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\";\n",
-    "    \n",
-    "    cleartext += username;\n",
+    "    cleartext += \"f1dafbdcab924862a198deaa5b6bae29aef7f2a442f841da975f1c515529d254\"\n",
     "\n",
-    "    hashed = sha256(cleartext.encode('utf8')).hexdigest()\n",
-    "    \n",
+    "    cleartext += username\n",
+    "\n",
+    "    hashed = sha256(cleartext.encode(\"utf8\")).hexdigest()\n",
+    "\n",
     "    for i in range(0, 5000):\n",
-    "        hashed = sha256(hashed.encode('utf8')).hexdigest()\n",
-    "    \n",
+    "        hashed = sha256(hashed.encode(\"utf8\")).hexdigest()\n",
+    "\n",
     "    salt = os.urandom(16)\n",
-    "    password = hash_password(hashed.encode('utf8'), salt)\n",
-    "    table.put_item(\n",
-    "        Item={\n",
-    "            'username': username,\n",
-    "            'salt': salt,\n",
-    "            'password': password\n",
-    "        }\n",
-    "    )\n",
+    "    password = hash_password(hashed.encode(\"utf8\"), salt)\n",
+    "    table.put_item(Item={\"username\": username, \"salt\": salt, \"password\": password})\n",
+    "\n",
     "\n",
     "#####\n",
     "# Fill in your desired username.\n",
     "#####\n",
-    "username = ''\n",
-    "assert username, 'Replace the username with your desired username'    \n",
+    "username = \"\"\n",
+    "assert username, \"Replace the username with your desired username\"\n",
     "print(f\"your username is {username}\")\n",
     "\n",
     "# Your password is automatically generated.\n",
@@ -272,7 +271,9 @@
     "\n",
     "create_user(username, password)\n",
     "password = \"\"\n",
-    "print(\"\"\"Make sure to clear this cell and restart the notebook to ensure your password does not leak!\"\"\")"
+    "print(\n",
+    "    \"\"\"Make sure to clear this cell and restart the notebook to ensure your password does not leak!\"\"\"\n",
+    ")"
    ]
   }
  ],
