minor ipynb fix

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -30,13 +30,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+
+    "from __future__ import annotations\n",
     "import json\n",
     "from typing import *\n",
     "\n",
     "import pydgraph  # type: ignore\n",
-    "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType\n",
+    "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType, EdgeT\n",
     "from grapl_analyzerlib.nodes.base import BaseSchema\n",
     "from grapl_analyzerlib.prelude import *\n",
+    "from grapl_analyzerlib.schemas import *\n",
     "from pydgraph import DgraphClient, DgraphClientStub"
    ]
   },
@@ -216,7 +219,6 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import annotations\n",
     "\n",
     "import os\n",
     "import string\n",
