improve grapl provision ipynb

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -19,18 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deployment_name = \"\"  # Fill this in!\n",
-    "\n",
-    "assert deployment_name, \"Please insert your deployment name here.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-
     "from __future__ import annotations\n",
     "import json\n",
     "from typing import *\n",
@@ -39,8 +27,20 @@
     "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType, EdgeT\n",
     "from grapl_analyzerlib.nodes.base import BaseSchema\n",
     "from grapl_analyzerlib.prelude import *\n",
-    "from grapl_analyzerlib.schemas import *\n",
-    "from pydgraph import DgraphClient, DgraphClientStub"
+    "from pydgraph import DgraphClient, DgraphClientStub\n",
+    "\n",
+    "print(\">> Okay, done setting up imports\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deployment_name = \"\"  # Fill this in!\n",
+    "\n",
+    "assert deployment_name, \"Please insert your deployment name here.\""
    ]
   },
   {
@@ -69,7 +69,7 @@
     "    )\n",
     "\n",
     "\n",
-    "def query_dgraph_predicate(client: \"GraphClient\", predicate_name: str):\n",
+    "def query_dgraph_predicate(client: \"GraphClient\", predicate_name: str) -> Any:\n",
     "    query = f\"\"\"\n",
     "        schema(pred: {predicate_name}) {{  }}\n",
     "    \"\"\"\n",
@@ -81,15 +81,14 @@
     "\n",
     "    return res\n",
     "\n",
-    "\n",
-    "def meta_into_edge(schema, predicate_meta):\n",
+    "def meta_into_edge(schema, predicate_meta) -> EdgeT:\n",
     "    if predicate_meta.get(\"list\"):\n",
     "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToMany)\n",
     "    else:\n",
     "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToOne)\n",
     "\n",
     "\n",
-    "def meta_into_property(schema, predicate_meta):\n",
+    "def meta_into_property(schema, predicate_meta) -> PropType:\n",
     "    is_set = predicate_meta.get(\"list\")\n",
     "    type_name = predicate_meta[\"type\"]\n",
     "    primitive = None\n",
@@ -99,22 +98,22 @@
     "        primitive = PropPrimitive.Int\n",
     "    if type_name == \"bool\":\n",
     "        primitive = PropPrimitive.Bool\n",
-    "\n",
+    "    \n",
+    "    assert primitive is not None\n",
     "    return PropType(primitive, is_set, index=predicate_meta.get(\"index\", []))\n",
     "\n",
     "\n",
-    "def meta_into_predicate(schema, predicate_meta):\n",
+    "def meta_into_predicate(schema, predicate_meta) -> Union[EdgeT, PropType]:\n",
     "    try:\n",
     "        if predicate_meta[\"type\"] == \"uid\":\n",
     "            return meta_into_edge(schema, predicate_meta)\n",
     "        else:\n",
     "            return meta_into_property(schema, predicate_meta)\n",
     "    except Exception as e:\n",
-    "        LOGGER.error(f\"Failed to convert meta to predicate: {predicate_meta} {e}\")\n",
-    "        raise e\n",
+    "        raise Exception(f\"Failed to convert meta to predicate: {predicate_meta}\") from e\n",
     "\n",
     "\n",
-    "def query_dgraph_type(client: \"GraphClient\", type_name: str):\n",
+    "def query_dgraph_type(client: \"GraphClient\", type_name: str) -> List[Any]:\n",
     "    query = f\"\"\"\n",
     "        schema(type: {type_name}) {{ type }}\n",
     "    \"\"\"\n",
@@ -141,7 +140,7 @@
     "    return predicate_metas\n",
     "\n",
     "\n",
-    "def extend_schema(graph_client: GraphClient, schema: \"BaseSchema\"):\n",
+    "def extend_schema(graph_client: GraphClient, schema: \"BaseSchema\") -> None:\n",
     "    predicate_metas = query_dgraph_type(graph_client, schema.self_type())\n",
     "\n",
     "    for predicate_meta in predicate_metas:\n",
@@ -156,7 +155,9 @@
     "    master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
     ") -> None:\n",
     "    mg_schema_str = format_schemas(schemas)\n",
-    "    set_schema(master_graph_client, mg_schema_str)"
+    "    set_schema(master_graph_client, mg_schema_str)\n",
+    "\n",
+    "print(\">> Okay, done setting up helper functions\")"
    ]
   },
   {
