Improved grapl provision a lot

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\">> Please wait for 'pip done!' before moving to the next cell.\")\n",
     "!python -m pip install --upgrade -q pip\n",
     "!pip install typing-extensions\n",
     "!pip install pydgraph\n",
     "#!pip install grapl_analyzerlib\n",
-    "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib"
+    "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib\n",
+    "print(\">> pip done!\")"
    ]
   },
   {
@@ -206,7 +208,8 @@
     "    provision_master_graph(mclient, schemas)\n",
     "\n",
     "\n",
-    "provision_mg(mclient)"
+    "provision_mg(mclient)\n",
+    "print(\">> Done provisioning!\")"
    ]
   },
   {
