Store schema in ipynb

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -31,6 +31,11 @@
     "from grapl_analyzerlib.prelude import *\n",
     "from pydgraph import DgraphClient, DgraphClientStub\n",
     "\n",
+    "import boto3\n",
+    "\n",
+    "if TYPE_CHECKING:\n",
+    "    from mypy_boto3_dynamodb import DynamoDBServiceResource\n",
+    "\n",
     "print(\">> Okay, done setting up imports\")"
    ]
   },
@@ -153,6 +158,16 @@
     "            schema.add_edge(predicate_meta[\"predicate\"], predicate, \"\")\n",
     "\n",
     "\n",
+    "def store_schema(table, schema: \"BaseSchema\") -> None:\n",
+    "    for f_edge, (_, r_edge) in schema.get_edges().items():\n",
+    "        if not (f_edge and r_edge):\n",
+    "            continue\n",
+    "\n",
+    "        table.put_item(Item={\"f_edge\": f_edge, \"r_edge\": r_edge})\n",
+    "        table.put_item(Item={\"f_edge\": r_edge, \"r_edge\": f_edge})\n",
+    "        print(f\"stored edge mapping: {f_edge} {r_edge}\")\n",
+    "\n",
+    "\n",
     "def provision_master_graph(\n",
     "    master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
     ") -> None:\n",
@@ -168,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + \".dgraph.grapl:9080\"))"
+    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + \".dgraph.grapl:9080\"))\n",
+    "dynamodb: DynamoDBServiceResource = boto3.resource(\"dynamodb\")"
    ]
   },
   {
@@ -181,8 +197,7 @@
    "source": [
     "# drop_all(mclient)\n",
     "\n",
-    "\n",
-    "def provision_mg(mclient) -> None:\n",
+    "def provision_mg(mclient: DgraphClient, dynamodb: DynamoDBServiceResource) -> None:\n",
     "    # drop_all(mclient)\n",
     "\n",
     "    schemas = (\n",
@@ -207,8 +222,12 @@
     "\n",
     "    provision_master_graph(mclient, schemas)\n",
     "\n",
+    "    table = dynamodb.Table(f\"{deployment_name}-grapl_schema_table\")\n",
+    "    for schema in schemas:\n",
+    "        store_schema(table, schema)\n",
     "\n",
-    "provision_mg(mclient)\n",
+    "\n",
+    "provision_mg(mclient=mclient, dynamodb=dynamodb)\n",
     "print(\">> Done provisioning!\")"
    ]
   },
@@ -230,20 +249,14 @@
     "from random import choice, randint\n",
     "from typing import TYPE_CHECKING\n",
     "\n",
-    "import boto3\n",
-    "\n",
-    "if TYPE_CHECKING:\n",
-    "    from mypy_boto3_dynamodb import DynamoDBServiceResource\n",
-    "\n",
     "\n",
     "def hash_password(cleartext, salt) -> str:\n",
     "    hashed = sha256(cleartext).digest()\n",
     "    return pbkdf2_hmac(\"sha256\", hashed, salt, 512000).hex()\n",
     "\n",
     "\n",
-    "def create_user(username, cleartext):\n",
+    "def create_user(username: str, cleartext: str) -> None:\n",
     "    assert cleartext\n",
-    "    dynamodb: DynamoDBServiceResource = boto3.resource(\"dynamodb\")\n",
     "    table = dynamodb.Table(deployment_name + \"-user_auth_table\")\n",
     "\n",
     "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
