add print from nate

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -161,6 +161,7 @@
     "def store_schema(table, schema: \"BaseSchema\") -> None:\n",
     "    for f_edge, (_, r_edge) in schema.get_edges().items():\n",
     "        if not (f_edge and r_edge):\n",
+    "            print(f\"!! We found an edge that is missing a reverse edge: {f_edge}\")\n",
     "            continue\n",
     "\n",
     "        table.put_item(Item={\"f_edge\": f_edge, \"r_edge\": r_edge})\n",
